tenants/ferme-du-jointout/applications/production/wordpress/site/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-site
  namespace: ${tenant}-wordpress-site
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.${domain}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
    - match: Host(`www.${domain}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
    - match: Host(`www.${domain}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
  tls:
    secretName: wildcard.${domain}.tls
